ok, ohg stukje verder

--- a/deriving-unrestricted.tex
+++ b/deriving-unrestricted.tex
@@ -489,9 +489,9 @@ In \ref{ex:ohg-nom-nom-lh}, the light head \tit{dher} `\tsc{dem}.\ac{sg}.\ac{m}.
  come.\ac{pst}.3\ac{sg}\scsub{[nom]} \ac{dem}.\ac{sg}.\ac{m}.\ac{nom} \ac{rel}.\ac{sg}.\ac{m}.\ac{nom} send.\ac{pst}.\ac{ptcp}\scsub{[nom]} should.\ac{pst}.3\ac{sg} become.\ac{inf}\\
  `the one, who should have been sent, came' \flushfill{Old High German, \ac{isid} 35:5}\label{ex:ohg-nom-nom-lh}
 
-Both examples in \ref{ex:ohg-nom-nom-rep} can be the underlying light-headed relative clause for the headless relative. First I show the comparison of the two constituents for \ref{ex:ohg-nom-nom-elh} and then the one for \ref{ex:ohg-nom-nom-lh}.
+Both examples in \ref{ex:ohg-nom-nom-rep} can be the light-headed relative clause that the headless relative is derived from. First I show the comparison of the two constituents for \ref{ex:ohg-nom-nom-elh} and then the one for \ref{ex:ohg-nom-nom-lh}.
 
-In Figure \ref{fig:ohg-int=ext}, I give the syntactic structure of the extra light head at the top and the syntactic structure of the relative pronoun at the bottom.
+In Figure \ref{fig:ohg-int=ext-elh}, I give the syntactic structure of the extra light head at the top and the syntactic structure of the relative pronoun at the bottom.
 
 \begin{figure}[htbp]
   \center
@@ -552,7 +552,7 @@ In Figure \ref{fig:ohg-int=ext}, I give the syntactic structure of the extra lig
   \end{tabular}
   \end{adjustbox}
   \caption {Old High German \tsc{ext}\scsub{nom} vs. \tsc{int}\scsub{nom} → \tit{dher} (\tsc{elh})}
-  \label{fig:ohg-int=ext}
+  \label{fig:ohg-int=ext-elh}
 \end{figure}
 
 The relative pronoun consists of two morphemes: \tit{dhe} and \tit{r}.
@@ -563,7 +563,7 @@ I draw a dashed circle around each constituent that is a constituent in both the
 The extra light head consists of a single constituent: the \tsc{nom}P.
 This \tsc{nom}P is also a constituent within the relative pronoun. Therefore, the extra light head can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
 
-In Figure \ref{fig:ohg-int=ext-1}, I give the syntactic structure of the extra light head at the top and the syntactic structure of the relative pronoun at the bottom.
+In Figure \ref{fig:ohg-int=ext-lh}, I give the syntactic structure of the light head at the top and the syntactic structure of the relative pronoun at the bottom.
 
 \begin{figure}[htbp]
   \center
@@ -575,9 +575,10 @@ In Figure \ref{fig:ohg-int=ext-1}, I give the syntactic structure of the extra l
         \begin{forest} boom
           [\tsc{d}P, s sep=20mm,
           tikz={
-          \node[draw,circle,
+          \node[draw,
+          constituent-deletion,yshift=-0.4cm,
           dotted,
-          scale=1,
+          scale=1.25,
           fit to=tree]{};
           }
               [\tsc{d}P,
@@ -611,10 +612,11 @@ In Figure \ref{fig:ohg-int=ext-1}, I give the syntactic structure of the extra l
       \begin{forest} boom
         [\tsc{rel}P, s sep=20mm,
         tikz={
-        \node[draw,circle,
+        \node[draw,
+        constituent-deletion,yshift=-0.4cm,
         dotted,
         fill=DG,fill opacity=0.2,
-        scale=1.05,
+        scale=1.2,
         fit to=tree]{};
         }
             [\tsc{rel}P,
@@ -648,7 +650,7 @@ In Figure \ref{fig:ohg-int=ext-1}, I give the syntactic structure of the extra l
   \end{tabular}
   \end{adjustbox}
   \caption {Old High German \tsc{ext}\scsub{nom} vs. \tsc{int}\scsub{nom} → \tit{dher} (\tsc{elh})}
-  \label{fig:ohg-int=ext-1}
+  \label{fig:ohg-int=ext-lh}
 \end{figure}
 
 The relative pronoun consists of two morphemes: \tit{dhe} and \tit{r}.
@@ -661,32 +663,209 @@ As the two forms are entirely syncretic, either the light head or the relative p
 I illustrate this by marking the content of the dotted circle for the relative pronoun gray.
 
 
-%external more complex
+The external case is nominative as well, as the predicate \tit{queman} `to come' also takes nominative subjects.
+In \ref{ex:ohg-nom-nom-elh}, the extra light head \tit{r} `\tsc{elh}.\ac{sg}.\ac{m}.\ac{nom}' appears in the nominative case. It is placed between square brackets because it does not surface.
+In \ref{ex:ohg-nom-nom-lh}, the light head \tit{dher} `\tsc{dem}.\ac{sg}.\ac{m}.\ac{nom}' appears in the nominative case. Here the relative pronoun is placed between square brackets because it does not surface.
 
 I continue with the situation in which the external case is the more complex one.
-Consider the examples in \ref{ex:ohg-acc-nom-rep}, in which the internal nominative case competes against the external accusative case. The relative clause is marked in bold.
-The surface pronoun is \tit{dhen} `\ac{dem}.\ac{sg}.\ac{m}.\ac{acc}'.
+Consider the examples in \ref{ex:ohg-acc-nom-rep}, in which the internal nominative case competes against the external accusative case. The relative clause is marked in bold. \ref{ex:ohg-acc-nom-elh} shows the example with the extra light head as the present light head and \ref{ex:ohg-acc-nom-lh} shows the example with the light head as the present light head.
 The internal case is nominative, as the predicate \tit{gisizzen} `to possess' takes nominative subjects.
+In both examples, the relative pronoun \tit{dher} `\ac{rel}.\ac{sg}.\ac{m}.\ac{nom}' appears in the nominative case.
 The external case is accusative, as the predicate \tit{bibringan} `to create' takes accusative objects.
+In \ref{ex:ohg-acc-nom-elh}, the extra light head \tit{n} `\tsc{elh}.\ac{sg}.\ac{m}.\ac{acc}' appears in the accusative case. It is placed between square brackets because it does not surface.
+In \ref{ex:ohg-acc-nom-lh}, the light head \tit{dhen} `\tsc{dem}.\ac{sg}.\ac{m}.\ac{acc}' appears in the accusative case. Here the relative pronoun is placed between square brackets because it does not surface.
 
-The relative pronoun \tit{dher} `\ac{rel}.\ac{sg}.\ac{m}.\ac{nom}' appears in the nominative case.
-The light head  appears in the accusative case. This is the element that surfaces.
-
-I end with the situation in which the external case is the more complex one.
-Consider the examples in \ref{ex:mg-dat-acc-rep}, in which the internal accusative case competes against the external dative case. The relative clauses are marked in bold. It is not possible to make a grammatical headless relative in this situation.
-The internal case is accusative, as the predicate \tit{mögen} `to like' takes accusative objects. The relative pronoun \tit{wen} `\ac{rel}.\ac{an}.\ac{acc}' appears in the accusative case.
-The external case is dative, as the predicate \tit{vertrauen} `to trust' takes dative objects. The extra light head \tit{m} `\ac{elh}.\ac{an}.\ac{dat}' appears in the dative case.
-\ref{ex:mg-dat-acc-rep-rp} is the variant of the sentence in which the extra light head is absent (indicated by the square brackets) and the relative pronoun surfaces, and it is ungrammatical.
-\ref{ex:mg-dat-acc-rep-lh} is the variant of the sentence in which the relative pronoun is absent (indicated by the square brackets) and the extra light head surfaces, and it is ungrammatical too.
-
-%I show how this cannot be the case
-\exg. ih bibringu fona iacobes samin endi fona iuda [n] \tbf{dher} \tbf{mina} \tbf{berga} \tbf{chisitzit}\\
+\ex.\label{ex:ohg-acc-nom-rep}
+\ag. *ih bibringu fona iacobes samin endi fona iuda [n] \tbf{dher} \tbf{mina} \tbf{berga} \tbf{chisitzit}\\
 1\ac{sg}.\ac{nom} {create}.\ac{pres}.1\ac{sg}\scsub{[acc]} of Jakob.\ac{gen} seed.\ac{sg}.\ac{dat} and of Judah.\ac{dat} \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} my.\ac{acc}.\ac{m}.\ac{pl} mountain.\ac{acc}.\ac{pl} possess.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
-`I create of the seed of Jacob and of Judah the one, who possess my mountains' \flushfill{Old High German, \ac{isid} 34:3}\label{ex:ohg-acc-nom-rep}
-
-\exg. ih bibringu fona iacobes samin endi fona iuda dhen [\tbf{dher}] \tbf{mina} \tbf{berga} \tbf{chisitzit}\\
+`I create of the seed of Jacob and of Judah the one, who possess my mountains' \flushfill{Old High German, \ac{isid} 34:3}\label{ex:ohg-acc-nom-elh}
+\bg. ih bibringu fona iacobes samin endi fona iuda dhen [\tbf{dher}] \tbf{mina} \tbf{berga} \tbf{chisitzit}\\
 1\ac{sg}.\ac{nom} {create}.\ac{pres}.1\ac{sg}\scsub{[acc]} of Jakob.\ac{gen} seed.\ac{sg}.\ac{dat} and of Judah.\ac{dat} \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} my.\ac{acc}.\ac{m}.\ac{pl} mountain.\ac{acc}.\ac{pl} possess.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
-`I create of the seed of Jacob and of Judah the one, who possess my mountains' \flushfill{Old High German, \ac{isid} 34:3}\label{ex:ohg-acc-nom-rep}
+`I create of the seed of Jacob and of Judah the one, who possess my mountains' \flushfill{Old High German, \ac{isid} 34:3}\label{ex:ohg-acc-nom-lh}
+
+Only \ref{ex:ohg-acc-nom-lh} can be the light-headed relative that the headless relative is derived from. First I show by comparing the constituents that no headless relative can be derived from the \ref{ex:ohg-acc-nom-elh}. Then I show the comparison of the two constituents for \ref{ex:ohg-acc-nom-lh}, which does derive a grammatical result.
+
+In Figure \ref{fig:mg-ext-wins-elh}, I give the syntactic structure of the extra light head at the top and the syntactic structure of the relative pronoun at the bottom.
+
+\begin{figure}[htbp]
+  \center
+  \begin{adjustbox}{max height=0.9\textheight}
+  \begin{tabular}[b]{c}
+      \toprule
+      \tsc{acc} extra light head \tit{n}
+      \\
+      \cmidrule{1-1}
+      \begin{forest} boom
+        [\tsc{acc}P,
+        tikz={
+        \node[label=below:{\tit{n}},
+        draw,circle,
+        scale=0.85,
+        fit to=tree]{};
+        }
+            [\tsc{f}2]
+            [\tsc{acc}P,
+            tikz={
+            \node[draw,circle,
+            dashed,
+            scale=0.8,
+            fit to=tree]{};
+            }
+                [\ac{f}1]
+                [\tsc{ind}P
+                    [\phantom{xxx}, roof]
+                ]
+            ]
+        ]
+      \end{forest}
+      \\
+      \toprule
+      \tsc{nom} relative pronoun \tit{dhe-r}
+      \\
+      \cmidrule{1-1}
+          \begin{forest} boom
+            [\tsc{rel}P
+                [\tsc{rel}P
+                    [\phantom{x}\tit{dhe}\phantom{x}, roof]
+                ]
+                [\tsc{acc}P,
+                tikz={
+                \node[label=below:{\tit{r}},
+                draw,circle,
+                scale=0.8,
+                fit to=tree]{};
+                \node[draw,circle,
+                dashed,
+                scale=0.85,
+                fit to=tree]{};
+                }
+                    [\ac{f}1]
+                    [\tsc{ind}P
+                        [\phantom{xxx}, roof]
+                    ]
+                ]
+            ]
+        \end{forest}
+        \\
+      \bottomrule
+  \end{tabular}
+  \end{adjustbox}
+   \caption {Old High German \tsc{ext}\scsub{acc} vs. \tsc{int}\scsub{nom} ↛ \tit{n}/\tit{dher} (\tsc{elh})}
+  \label{fig:ohg-ext-wins-elh}
+\end{figure}
+
+The relative pronoun consists of two morphemes: \tit{dhe} and \tit{r}.
+The extra light head consists of a single morpheme: \tit{n}.
+Again, I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology under it, or I reduce the structure to a triangle, and I place the corresponding phonology under it.
+I draw a dashed circle around each constituent that is a constituent in both the extra light head and the relative pronoun.
+
+The extra light head consists of a single constituent: the \tsc{acc}P.
+In this case, the relative pronoun does not contain this constituent. The relative pronoun only contains the \tsc{nom}P, and it lacks the \tsc{f}2 that makes a \tsc{acc}P. Since the weaker feature containment requirement is not met, the stronger constituent containment requirement cannot be met either.
+The extra light head also does not contain all constituents or features that the relative pronoun contains, because it lacks the complete constituent and \tsc{rel}P.
+Therefore, the extra light cannot be deleted, and the relative pronoun cannot be deleted either.
+
+
+In what follows, I show that the light-headed relative that contains the light head is the structure that the headless relative is derived from. I cannot show this by directly comparing the constituents that the light head and the relative pronoun consist of. I need to make some assumptions I am making regarding the larger syntactic structure explicit. Before I do that, and I derive the grammatical result, I show that a direct comparison of the light head and the relative pronoun does not lead to a grammatical result.
+
+In Figure \ref{fig:ohg-ext-wins-lh}, I give the syntactic structure of the light head at the top and the syntactic structure of the relative pronoun at the bottom.
+
+\begin{figure}[htbp]
+  \center
+  \begin{adjustbox}{max height=0.9\textheight}
+  \begin{tabular}[b]{c}
+        \toprule
+        \tsc{nom} light head \tit{dhe-r}\\
+        \cmidrule{1-1}
+        \begin{forest} boom
+          [\tsc{d}P, s sep=20mm,
+          tikz={
+          \node[draw,
+          constituent-deletion,yshift=-0.4cm,
+          dotted,
+          scale=1.25,
+          fit to=tree]{};
+          }
+              [\tsc{d}P,
+              tikz={
+              \node[label=below:\tit{dhe},
+              draw,circle,
+              scale=0.85,
+              fit to=tree]{};
+              }
+                  [\phantom{xxx}, roof, baseline]
+              ]
+              [\tsc{nom}P,
+              tikz={
+              \node[label=below:\tit{r},
+              draw,circle,
+              scale=0.85,
+              fit to=tree]{};
+              }
+                  [\tsc{f}1]
+                  [\tsc{ind}P
+                      [\phantom{xxx}, roof, baseline]
+                  ]
+              ]
+          ]
+        \end{forest}
+      \\
+      \toprule
+      \tsc{nom} relative pronoun \tit{dhe-r}
+      \\
+      \cmidrule{1-1}
+      \begin{forest} boom
+        [\tsc{rel}P, s sep=20mm,
+        tikz={
+        \node[draw,
+        constituent-deletion,yshift=-0.4cm,
+        dotted,
+        fill=DG,fill opacity=0.2,
+        scale=1.2,
+        fit to=tree]{};
+        }
+            [\tsc{rel}P,
+            tikz={
+            \node[label=below:\tit{dhe},
+            draw,circle,
+            scale=0.85,
+            fit to=tree]{};
+            }
+                [\tsc{rel}]
+                [\tsc{d}P
+                    [\phantom{xxx}, roof, baseline]
+                ]
+            ]
+            [\tsc{nom}P,
+            tikz={
+            \node[label=below:\tit{r},
+            draw,circle,
+            scale=0.85,
+            fit to=tree]{};
+            }
+                [\tsc{f}1]
+                [\tsc{ind}P
+                    [\phantom{xxx}, roof, baseline]
+                ]
+            ]
+        ]
+      \end{forest}
+        \\
+      \bottomrule
+  \end{tabular}
+  \end{adjustbox}
+  \caption {Old High German \tsc{ext}\scsub{acc} vs. \tsc{int}\scsub{nom} ↛ \tit{dhen}/\tit{ther} (\tsc{lh})}
+  \label{fig:ohg-ext-wins-lh}
+\end{figure}
+
+
+
+
+So far, I have only be talking about the light head and the relative pronoun separately. I have not placed them in a larger syntactic structure. For the discussion so far that has also not been relevant:
+
+
+
+
+
 
 - ext wins doesn't work, so first larger syntactic structure: head needs to be up there, for instance cinque (he also says we need to have it up there)
 then: yes, at some point in the derivation, and then merge the k2
