--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
-\documentclass[11pt,hidelinks,a4paper]{memoir}
+\documentclass[hidelinks,a4paper,oneside]{memoir}
 
-% \includeonly{deriving-unrestricted}
+% \includeonly{the-basic-idea}
 %
 % \setulmarginsandblock{3.3cm}{4cm}{*}
 % \setlrmarginsandblock{3cm}{3cm}{*}
