--- a/thesis.tex
+++ b/thesis.tex
@@ -1,4 +1,4 @@
-\documentclass[hidelinks,a4paper,oneside]{memoir}
+\documentclass[hidelinks,a4paper,twoside]{memoir}
 
 % \includeonly{the-basic-idea}
 %
